@@ -1,0 +1,24 @@
+/* -------------------------------------------------------------- 
+   
+   forms.css
+   * Sets up some default styling for forms
+   * Gives you classes to enhance your forms
+  
+-------------------------------------------------------------- */
+
+/* Success, error & notice boxes for messages and errors. */
+.error,
+.notice, 
+.success    { padding:.8em; margin-bottom:1em; border:2px solid #ddd; }
+.error      { background:#FBE3E4; color:#D12F19; border-color: #FBC2C4; }
+.notice     { background:#FFF6BF; color:#817134; border-color: #FFD324; }
+.success    { background:#E6EFC2; color:#529214; border-color: #C6D880; }
+
+.error a    { color:#D12F19; }
+.notice a   { color:#817134; }
+.success a  { color:#529214; }
+
+
+/* Fieldsets */
+fieldset    { padding:1.4em; margin:1.5em 0; border:1px solid #ddd; }
+legend      { font-weight: bold; }
